--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,8 @@
 services:
   nginx:
     build: ./srcs/nginx
+    container_names: nginx
+    volumes:database:/home/loumouli/data
+
+volumes:
+  database:
