--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   nginx:
     build: ./srcs/nginx
     container_names: nginx
-    volumes:database:/home/loumouli/data
+    volumes:
+      - database:/home/loumouli/data
 
 volumes:
   database:
