--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,8 @@
+volumes:
+  database:
+  drive:local
+    name:database
+
 services:
   nginx:
     build: ./srcs/nginx
@@ -5,5 +10,3 @@ services:
       - database:/home/loumouli/data
     restart: always
 
-volumes:
-  database:
