--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -5,4 +5,7 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:4096 -keyout /etc/ssl/private
 
 COPY ./nginx.conf /var/www/html
 
+EXPOSE 443/tcp
+EXPOSE 443/udp
+
 CMD ["nginx", "-g", "daemon off;"]
