--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -4,4 +4,6 @@ server {
 	ssl_cerificate /etc/ssl/certs/nginx.crt;
 	ssl_cerificate_key /etc/ssl/private/nginx.key;
 	ssl_protocls TLSv2 TSLv2;
+	root /www/data/html
+	index index.html
 }
