--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -1,9 +1,11 @@
 server {
 	listen 443 ssl;
-	server_name loumouli.42.fr;
+	server_name localhost;
+	root /www/data/html
+	index index.html
+	access_log /www/data/html/access_log.log
+	error_log /www/data/html/error_log.log
 	ssl_cerificate /etc/ssl/certs/nginx.crt;
 	ssl_cerificate_key /etc/ssl/private/nginx.key;
 	ssl_protocls TLSv2 TSLv2;
-	root /www/data/html
-	index index.html
 }
