--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -1,11 +1,11 @@
 server {
 	listen 443 ssl;
 	server_name localhost;
-	root /www/data/html
-	index index.html
-	access_log /www/data/html/access_log.log
-	error_log /www/data/html/error_log.log
+	root /www/data/html;
+	index index.html;
+	access_log /www/data/html/access_log.log;
+	error_log /www/data/html/error_log.log;
 	ssl_cerificate /etc/ssl/certs/nginx.crt;
 	ssl_cerificate_key /etc/ssl/private/nginx.key;
-	ssl_protocls TLSv2 TSLv2;
+	ssl_protocls TLSv1.2 TSLv1.3;
 }
