--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -7,5 +7,5 @@ server {
 	error_log /www/data/html/error_log.log;
 	ssl_cerificate /etc/ssl/certs/nginx.crt;
 	ssl_cerificate_key /etc/ssl/private/nginx.key;
-	ssl_protocls TLSv1.2 TSLv1.3;
+	ssl_protocls TLSv1.2 TLSv1.3;
 }
