--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -1,11 +1,12 @@
-server {
-	listen 443 ssl;
-	server_name localhost;
-	root /www/data/html;
-	index index.html;
-	access_log /www/data/html/access_log.log;
-	error_log /www/data/html/error_log.log;
-	ssl_cerificate /etc/ssl/certs/nginx.crt;
-	ssl_cerificate_key /etc/ssl/private/nginx.key;
-	ssl_protocls TLSv1.2 TLSv1.3;
+http {
+
+	server {
+		listen 443 ssl;
+		server_name localhost;
+		root /var/www/data;
+		index index.html;
+		ssl_cerificate /etc/ssl/certs/nginx.crt;
+		ssl_cerificate_key /etc/ssl/private/nginx.key;
+		ssl_protocls TLSv1.2 TLSv1.3;
+	}
 }
