--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -5,8 +5,8 @@ http {
 		server_name localhost;
 		root /var/www/data;
 		index index.html;
-		ssl_cerificate /etc/ssl/certs/nginx.crt;
-		ssl_cerificate_key /etc/ssl/private/nginx.key;
-		ssl_protocls TLSv1.2 TLSv1.3;
+		ssl_certificate /etc/ssl/certs/nginx.crt;
+		ssl_certificate_key /etc/ssl/private/nginx.key;
+		ssl_protocols TLSv1.2 TLSv1.3;
 	}
 }
