--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -10,5 +10,5 @@ CMD ["ls", "/var/www/html"]
 
 EXPOSE 443
 
-# CMD ["nginx", "-g", "daemon off;"]
-CMD ["nginx", "-t"]
+CMD ["nginx", "-g", "daemon off;"]
+# CMD ["nginx", "-t"]
