--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -7,7 +7,7 @@ http {
 	server {
 		listen 443 ssl;
 		server_name localhost;
-		root /var/www/data;
+		root /var/www/html;
 		index index.html;
 		ssl_certificate /etc/ssl/certs/nginx.crt;
 		ssl_certificate_key /etc/ssl/private/nginx.key;
