--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
 
 	server {
 		listen					443 ssl;
-		root					/var/www/html;
+		root					/var/www/html/;
 		index					index.html;
 		server_name				localhost;
 		ssl_certificate 		/etc/ssl/certs/nginx.crt;
