--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -11,10 +11,10 @@ http {
 		ssl_certificate 		/etc/ssl/certs/nginx.crt;
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
-		location / {
-			fastcgi_pass  localhost:9000;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_param QUERY_STRING    $query_string;
-   		}
+		# location / {
+		# 	fastcgi_pass  localhost:9000;
+		# 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		# 	fastcgi_param QUERY_STRING    $query_string;
+   		# }
 	}
 }
