--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:3.17
 
-RUN apk update && apk add php8-fpm
+RUN apk update && echo "http://mirrors.ircam.fr/pub/alpine/edge/community" >> /etc/apk/repositories && apk add php8-fpm
 
 CMD ["tail", "-f"]
