--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
 		location / {
-			include /etc/nginx/fastcgi.conf
+			include /etc/nginx/fastcgi.conf;
 			fastcgi_pass  localhost:9000;
    		}
 	}
