--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -31,6 +31,8 @@ RUN 	echo "http://mirrors.ircam.fr/pub/alpine/edge/testing" >> /etc/apk/reposito
 	chmod +x wp-cli.phar &&\
 	mv wp-cli.phar /usr/local/bin/wp
 
+RUN	adduser -S nginx &&	addgroup -S nginx
+
 COPY ./www.conf /etc/php8/php-fpm.d/www.conf
 
 EXPOSE 9000
