--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -31,7 +31,7 @@ RUN 	echo "http://mirrors.ircam.fr/pub/alpine/edge/testing" >> /etc/apk/reposito
 	chmod +x wp-cli.phar &&\
 	mv wp-cli.phar /usr/local/bin/wp
 
-RUN	adduser -S nginx &&	addgroup -S nginx && echo "127.0.0.1 localhost loumouli.42.fr"
+RUN	adduser -S nginx &&	addgroup -S nginx && echo "127.0.0.1 localhost loumouli.42.fr" > /etc/hosts
 
 COPY ./www.conf /etc/php8/php-fpm.d/www.conf
 
