--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -3,8 +3,22 @@ FROM alpine:3.17
 RUN 	echo "http://mirrors.ircam.fr/pub/alpine/edge/testing" >> /etc/apk/repositories \
 	&&	apk update \
 	&& apk add --no-cache php8 \
+	lighttpd	\
     php8-common \
+	php8-session\
+	php8-gd\
+	php8-mcrypt\
+	php8-soap\
+	php8-gettext\
+	php8-ldap\
+	php8-mysqli\
+	php8-ctype\
+	php8-posix\
+	php8-cgi\
+	php8-xmlrpc\
+	php8-imap\
     php8-fpm \
+	fcgi\
     php8-pdo \
     php8-opcache \
     php8-zip \
@@ -33,7 +47,12 @@ RUN 	echo "http://mirrors.ircam.fr/pub/alpine/edge/testing" >> /etc/apk/reposito
 
 RUN	adduser -S nginx &&	addgroup -S nginx
 
+
 COPY ./www.conf /etc/php8/php-fpm.d/www.conf
+
+COPY ./setup_wp.sh /tmp/setup_wp.sh
+RUN chmod +x /tmp/setup_wp.sh
+ENTRYPOINT [ "sh", "/tmp/setup_wp.sh" ]
 
 EXPOSE 9000
 
