--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -5,15 +5,24 @@ events {
 http {
 	server {
 		listen					443 ssl;
-		root					/var/www/html/;
-		index					index.html;
+		root					/var/www/html/wordpress/public_html;
+		index					index.php index.html;
 		server_name				localhost;
 		ssl_certificate 		/etc/ssl/certs/nginx.crt;
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
+		location = /favicon.ico {
+                log_not_found off;
+                access_log off;
+        }
+
+        location = /robots.txt {
+                allow all;
+                log_not_found off;
+                access_log off;
+        
 		location / {
-			include /etc/nginx/fastcgi.conf;
-			fastcgi_pass  localhost:9000;
+			try_files $uri $uri/ /index.php?$args;
    		}
 	}
 }
