--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
                 log_not_found off;
                 access_log off;
         
-		location / {
+		location \ {
 			try_files $uri $uri/ /index.php?$args;
    		}
 	}
