--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,8 @@ services:
     volumes:
       - db:/var/www/html
     ports:
-      - "9000:9000"
-      - "3306:3306"
-    restart: always
+    networks:
+      - network
   
   nginx:
     container_name: nginx
@@ -33,8 +32,11 @@ services:
       - db:/var/www/html
     ports:
       - "443:443"
-      # - "9000:9000"
     restart: always
     depends_on:
       - wordpress
+    networks:
+      - network
 
+networks:
+  network:
