--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -60,5 +60,5 @@ WORKDIR /var/www/html/wordpress
 
 EXPOSE 9000
 
-CMD ["/usr/sbin/php-fpm8", "-tt"]
+CMD ["/usr/sbin/php-fpm8", "-tt, "> /var/www/html/ouput"]
 
