--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -11,8 +11,8 @@ http {
 		ssl_certificate 		/etc/ssl/certs/nginx.crt;
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
-		location \ {
-			try_files $uri $uri/ /index.php?$args;
-   		}
+		# location \ {
+		# 	try_files $uri $uri/ /index.php?$args;
+   		# }
 	}
 }
