--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -11,6 +11,13 @@ http {
 		ssl_certificate 		/etc/ssl/certs/nginx.crt;
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
+		location ~ \.php$ {
+			try_files $uri =404;
+			fastcgi_pass unix:/var/run/php5-fpm.sock;
+			fastcgi_index index.php;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			include fastcgi_params;
+   		}
 		# location \ {
 		# 	try_files $uri $uri/ /index.php?$args;
    		# }
