--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -12,8 +12,7 @@ http {
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
 		location ~ \.php$ {
-			try_files $uri =404;
-			fastcgi_pass unix:/var/run/php5-fpm.sock;
+			fastcgi_pass 127.0.0.1:9000;
 			fastcgi_index index.php;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			include fastcgi_params;
