--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -11,11 +11,18 @@ http {
 		ssl_certificate 		/etc/ssl/certs/nginx.crt;
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
-		location ~ \.php$ {
-			fastcgi_pass 127.0.0.1:9000;
-			fastcgi_index index.php;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			include fastcgi_params;
+		location / {
+       		try_files $uri $uri/ /index.php$is_args$args;
    		}
+
+		location ~ \.php$ {
+			try_files $uri =404;
+			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+			fastcgi_pass localhost:9000;
+			fastcgi_index index.php;
+			include fastcgi_params;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param PATH_INFO $fastcgi_path_info;
+		}
 	}
 }
