--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -12,17 +12,16 @@ http {
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
 		location / {
-       		try_files $uri $uri/ /index.php$is_args$args;
-   		}
+			try_files $uri $uri/ /index.php$is_args$args;
+		}
 
 		location ~ \.php$ {
-			try_files $uri =404;
 			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass localhost:9000;
+			fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
 			fastcgi_index index.php;
 			include fastcgi_params;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_param PATH_INFO $fastcgi_path_info;
+			fastcgi_param SCRIPT_NAME $fastcgi_script_name;
 		}
 	}
 }
