--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -60,6 +60,6 @@ WORKDIR /var/www/html/wordpress
 
 EXPOSE 9000
 
-# CMD ["/usr/sbin/php-fpm8", "-F"]
-CMD ["/usr/sbin/php-fpm8", "-tt"]
+CMD ["/usr/sbin/php-fpm8", "-F"]
+# CMD ["/usr/sbin/php-fpm8", "-tt"]
 
