--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -17,7 +17,7 @@ http {
 
 		location ~ \.php$ {
 			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass localhost:9000; #PHP for wordpress will listen on the port 9000
+			fastcgi_pass localhost:9000;
 			fastcgi_index index.php;
 			include fastcgi_params;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
