--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -12,7 +12,7 @@ http {
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
 		location / {
-			try_files $uri $uri/ /index.php$is_args$args;
+			try_files $uri /index.php$is_args$args;
 		}
 
 		location ~ \.php$ {
