--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -22,6 +22,10 @@ http {
 			include fastcgi_params;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 			fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+			include /etc/nginx/conf.d/*.conf;
+      		include /etc/nginx/sites-enabled/*;
+       		fastcgi_intercept_errors        on;
+      		error_page 404 /error/404.php;
 		}
 	}
 }
