--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -16,16 +16,9 @@ http {
 		}
 
 		location ~ \.php$ {
-			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass localhost:9000;
-			fastcgi_index index.php;
-			include fastcgi_params;
+			fastcgi_param REQUEST_METHOD $request_method;
 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-			include /etc/nginx/conf.d/*.conf;
-      		include /etc/nginx/sites-enabled/*;
-       		fastcgi_intercept_errors        on;
-      		error_page 404 /error/404.php;
+			fastcgi_pass 127.0.0.1:9000;
 		}
 	}
 }
