--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -6,14 +6,11 @@ http {
 	server {
 		listen					443 ssl;
 		root					/var/www/html/wordpress/;
-		index					index.php index.html;
+		index					index.php;
 		server_name				localhost;
 		ssl_certificate 		/etc/ssl/certs/nginx.crt;
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
-		location / {
-			try_files $uri /index.php$is_args$args;
-		}
 
 		location ~ \.php$ {
 			fastcgi_param REQUEST_METHOD $request_method;
