--- a/srcs/wordpress/www.conf
+++ b/srcs/wordpress/www.conf
@@ -449,7 +449,7 @@ pm.max_spare_servers = 3
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
-;php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/php8/$pool.error.log
-;php_admin_flag[log_errors] = on
+php_flag[display_errors] = on
+php_admin_value[error_log] = /var/log/php8/$pool.error.log
+php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
