--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -6,16 +6,26 @@ http {
 	server {
 		listen					443 ssl;
 		root					/var/www/html/wordpress/;
-		index					index.php;
 		server_name				localhost;
 		ssl_certificate 		/etc/ssl/certs/nginx.crt;
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
 
-		location ~ \.php$ {
-			fastcgi_param REQUEST_METHOD $request_method;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_pass 127.0.0.1:9000;
-		}
+			location / {
+		try_files		$uri $uri/ =404;
+		index			index.php index.html;
+		autoindex		on;
+	}
+
+	location ~ \.php$ {
+		try_files		$uri $uri/ =404;
+
+		include			fastcgi_params;
+		fastcgi_pass	wordpress:9000;
+		fastcgi_index	index.php;
+		fastcgi_param	SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param	SCRIPT_NAME $fastcgi_script_name;
+		fastcgi_param	PATH_INFO $fastcgi_path_info;
+	}
 	}
 }
