--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
 		try_files		$uri $uri/ =404;
 
 		include			fastcgi_params;
-		fastcgi_pass	wordpress:9000;
+		fastcgi_pass	localhost:9000;
 		fastcgi_index	index.php;
 		fastcgi_param	SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		fastcgi_param	SCRIPT_NAME $fastcgi_script_name;
