--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -5,27 +5,27 @@ events {
 http {
 	server {
 		listen					443 ssl;
-		root					/var/www/html/wordpress/;
 		server_name				localhost;
+		root					/var/www/html/;
+
 		ssl_certificate 		/etc/ssl/certs/nginx.crt;
 		ssl_certificate_key 	/etc/ssl/private/nginx.key;
 		ssl_protocols 			TLSv1.2 TLSv1.3;
 
 			location / {
-		try_files		$uri $uri/ =404;
-		index			index.php index.html;
-		autoindex		on;
-	}
+			try_files		$uri $uri/ =404;
+			index			index.php index.html;
+			autoindex		on;
+		}
 
-	location ~ \.php$ {
-		try_files		$uri $uri/ =404;
-
-		include			fastcgi_params;
-		fastcgi_pass	localhost:9000;
-		fastcgi_index	index.php;
-		fastcgi_param	SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_param	SCRIPT_NAME $fastcgi_script_name;
-		fastcgi_param	PATH_INFO $fastcgi_path_info;
-	}
+		location ~ \.php$ {
+			try_files		$uri  =404;
+			include			fastcgi_params;
+			fastcgi_pass	localhost:9000;
+			fastcgi_index	index.php;
+			fastcgi_param	SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param	SCRIPT_NAME $fastcgi_script_name;
+			fastcgi_param	PATH_INFO $fastcgi_path_info;
+		}
 	}
 }
