--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -46,7 +46,9 @@ RUN	curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
 	chmod +x wp-cli.phar &&\
 	mv wp-cli.phar /usr/local/bin/wp
 
-RUN	adduser -S nginx &&	addgroup -S nginx
+RUN	adduser -u 82 -D -S -G www-data www-data
+RUN chmod 777 -R /var/www/html
+RUN chown -R www-data:www-data /var/www/html
 
 RUN mkdir /run/php
 
