--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -47,6 +47,7 @@ RUN	curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
 	mv wp-cli.phar /usr/local/bin/wp
 
 RUN	adduser -u 82 -D -S -G www-data www-data
+RUN mkdir -p /var/www/html
 RUN chmod 777 -R /var/www/html
 RUN chown -R www-data:www-data /var/www/html
 
