--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -54,12 +54,13 @@ RUN chown -R www-data:www-data /var/www/html
 RUN mkdir /run/php
 
 COPY ./www.conf /etc/php8/php-fpm.d/www.conf
+COPY ./wp-config.php ./
 
 COPY ./setup_wp.sh /tmp/setup_wp.sh
 RUN chmod +x /tmp/setup_wp.sh
 ENTRYPOINT [ "sh", "/tmp/setup_wp.sh" ]
 
-WORKDIR /var/www/html/wordpress
+WORKDIR /var/www/html
 
 EXPOSE 9000
 
