--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -54,6 +54,7 @@ RUN chown -R www-data:www-data /var/www/html
 RUN mkdir /run/php
 
 COPY ./www.conf /etc/php8/php-fpm.d/www.conf
+COPY ./wp-config.php /tmp
 COPY ./wp-config.php ./
 
 COPY ./setup_wp.sh /tmp/setup_wp.sh
