--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,8 +4,7 @@ RUN apk update && apk add nginx openssl
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:4096 -keyout /etc/ssl/private/nginx.key -out /etc/ssl/certs/nginx.crt -subj "/C=FR/ST=Paris/L=Paris/O=loulouCorp/CN=loumouli.42.fr" \
 	&& mkdir -p /var/www/html
 
-COPY ./nginx.conf /etc/nginx/
-COPY ./index.html /var/www/html
+COPY nginx.conf /etc/nginx/
 
 EXPOSE 443
 
