--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -4,28 +4,23 @@ events {
 
 http {
 	server {
-		listen					443 ssl;
-		server_name				localhost;
-		root					/var/www/html/;
+	    #SSL STUFF
+		listen					443 ssl; #ssl only on port 443
+		ssl_protocols 			TLSv1.2 TLSv1.3; #specifing the TSL version
+		ssl_certificate 		/etc/ssl/certs/nginx.crt; #providing my self signed certificate
+		ssl_certificate_key 	/etc/ssl/private/nginx.key; #providing my key derived from the certificate
 
-		ssl_certificate 		/etc/ssl/certs/nginx.crt;
-		ssl_certificate_key 	/etc/ssl/private/nginx.key;
-		ssl_protocols 			TLSv1.2 TLSv1.3;
+		server_name				localhost; #my server name
+		root					/var/www/wordpress; #where is the root og my server
+        index                   index index.php index.html index.htm; #what is the index file of my server
 
-			location / {
-			try_files		$uri $uri/ =404;
-			index			index.php index.html;
-			autoindex		on;
+		location / { #trying to handle 404 error
+			try_files		    $uri $uri/ =404;
 		}
 
-		location ~ \.php$ {
-			try_files		$uri  =404;
-			include			fastcgi_params;
-			fastcgi_pass	localhost:9000;
-			fastcgi_index	index.php;
-			fastcgi_param	SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_param	SCRIPT_NAME $fastcgi_script_name;
-			fastcgi_param	PATH_INFO $fastcgi_path_info;
+		location ~ \.php$ { #tying to handle php outside this containers
+		    include             snippets/fastcgi-php.conf
+		    fastcgi_pass        wordpress:9000; #redirect php request to port 9000
 		}
 	}
 }
