--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -18,29 +18,41 @@ services:
   mariadb:
     container_name: mariadb
     build: requirements/mariadb
-    restart: always
+    volumes:
+      - mariadb:/var/lib/mysql
+    networks:
+      - network
+    expose:
+      - "3306"
+    env_file: .env
+    restart: on-failure
+
   wordpress:
+    depends_on:
+      - mariadb
     container_name: wordpress
     build: requirements/wordpress
     volumes:
-      - db:/var/www/html
+      - db:/var/www/wordpress
     networks:
       - network
-    restart: always
+    expose:
+      - "9000"
+    env_file: .env
+    restart: on-failure
 
   nginx:
-    depends_on:
-      - wordpress
+
     container_name: nginx
     build: requirements/nginx
     volumes:
-      - db:/var/www/html
+      - db:/var/www/wordpress
     ports:
       - "443:443"
     networks:
       - network
-    restart: always
-
+    env_file: .env
+    restart: on-failure
 
 networks:
   network:
