--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -5,7 +5,9 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:4096 -keyout /etc/ssl/private
 RUN mkdir -p /var/www/html && mkdir -p /var/run/nginx
 
 COPY nginx.conf /etc/nginx/nginx.conf
-RUN adduser www-data && addgroup www-data && adduser www-data www-data
+RUN adduser www-data
+RUN addgroup www-data 
+RUN adduser www-data www-data
 RUN chmod 755 /var/www/html && chown -R www-data:www-data /var/www/html
 
 
