--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -3,6 +3,7 @@ events {
 }
 
 http {
+	include /etc/nginx/mime.types;
 	server {
 	    #SSL STUFF
 		listen					443 ssl; #ssl only on port 443
@@ -19,7 +20,7 @@ http {
 		}
 
 		location ~ \.php$ { #tying to handle php outside this containers
-		    include             snippets/fastcgi-php.conf
+		    include             snippets/fastcgi-php.conf;
 		    fastcgi_pass        wordpress:9000; #redirect php request to port 9000
 		}
 	}
