--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -8,5 +8,5 @@ COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 443
 
-# CMD ["nginx", "-g", "daemon off;"]
-CMD ["nginx", "-t"]
+CMD ["nginx", "-g", "daemon off;"]
+# CMD ["nginx", "-t"]
