--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -6,6 +6,6 @@ COPY ./conf/50-server.cnf /etc/my.cnf.d/mariadb-server.cnf
 
 COPY ./script/script_db.sh /tmp
 RUN chmod 777 /tmp/script_db.sh
-ENTRYPOINT [ "sh", "/tmp/script_db.sh" ]
+# ENTRYPOINT [ "sh", "/tmp/script_db.sh" ]
 CMD [ "tail", "-f" ]
 EXPOSE 3306
