--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.17
 
 RUN apk update && apk upgrade && apk add mysql mysql-client mariadb-server-utils mariadb openrc
-RUN rc-serive mariadb start
+RUN rc-service mariadb start
 # COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 # COPY ./conf/50-server.cnf /etc/my.cnf.d/mariadb-server.cnf
 
