--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -14,5 +14,6 @@ COPY ./conf/50-server.cnf /etc/my.cnf.d/mariadb-server.cnf
 COPY ./script/script_db.sh /tmp
 RUN chmod 777 /tmp/script_db.sh
 ENTRYPOINT [ "sh", "/tmp/script_db.sh" ]
+CMD [ "mysqld", "--bind-address=0.0.0.0"]
 # CMD [ "tail", "-f" ]
 EXPOSE 3306
