--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -11,9 +11,9 @@ COPY ./conf/50-server.cnf /etc/my.cnf.d/mariadb-server.cnf
 
 # RUN /etc/init.d/mariadb setup
 
-COPY ./script/script_db.sh /tmp
-RUN chmod 777 /tmp/script_db.sh
-ENTRYPOINT [ "sh", "/tmp/script_db.sh" ]
+COPY ./script/mariadb.sh /tmp
+RUN chmod 777 /tmp/mariadb.sh
+ENTRYPOINT [ "sh", "/tmp/mariadb.sh" ]
 CMD [ "mysqld", "--bind-address=0.0.0.0"]
 # CMD [ "tail", "-f" ]
 EXPOSE 3306
