--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -11,6 +11,8 @@ COPY ./conf/50-server.cnf /etc/my.cnf.d/mariadb-server.cnf
 COPY ./script/mariadb.sh /tmp
 RUN chmod 777 /tmp/mariadb.sh
 ENTRYPOINT [ "sh", "/tmp/mariadb.sh" ]
+COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY ./conf/50-server.cnf /etc/my.cnf.d/mariadb-server.cnf
 CMD [ "mysqld", "--bind-address=0.0.0.0"]
 # CMD [ "tail", "-f" ]
 EXPOSE 3306
