--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -12,6 +12,8 @@ ENTRYPOINT [ "sh", "/tmp/mariadb.sh" ]
 COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 COPY ./conf/50-server.cnf /etc/my.cnf.d/mariadb-server.cnf
 
+
+CMD [ "tail", "-f" ]
 CMD [ "mysqld", "--bind-address=0.0.0.0"]
 
 EXPOSE 3306
