--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -2,7 +2,8 @@
 default-character-set=utf8
 
 [mysqld]
+datadir = /var/lib/mysql
+socket  = /run/mysqld/mysqld.sock
+bind_address=0.0.0.0
 port = 3306
 user = mysql
-datadir = /var/lib/mysql
-bind_address=0.0.0.0
