--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,19 +1,11 @@
-FROM alpine:3.17
+FROM debian:buster
 
-RUN apk update && apk upgrade && apk add mysql mysql-client mariadb-server-utils mariadb openrc
+RUN apt-get update && apt-get upgrade -y
+RUN apt-get install mariadb-server -y
 
-COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
-COPY ./conf/50-server.cnf /etc/my.cnf.d/mariadb-server.cnf
+COPY conf/50-server.cnf	/etc/mysql/mariadb.conf.d/50-server.cnf
+COPY script/mariadb.sh /mariadb.sh
 
-COPY ./script/mariadb.sh /tmp
-RUN chmod 777 /tmp/mariadb.sh
-ENTRYPOINT [ "sh", "/tmp/mariadb.sh" ]
-
-COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
-COPY ./conf/50-server.cnf /etc/my.cnf.d/mariadb-server.cnf
-
-
-CMD [ "tail", "-f" ]
-# CMD [ "mysqld", "--bind-address=0.0.0.0"]
+ENTRYPOINT ["bash", "mariadb.sh"]
 
 EXPOSE 3306
