--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -3,7 +3,7 @@ default-character-set=utf8
 
 [mysqld]
 datadir = /var/lib/mysql
-socket  = /var/run/mysqld/mysqld.sock
+socket  = /run/mysqld/mysqld.sock
 bind_address=0.0.0.0
 port = 3306
 user = mysql
