--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -6,6 +6,8 @@ RUN apt-get install mariadb-server -y
 COPY conf/50-server.cnf	/etc/mysql/mariadb.conf.d/50-server.cnf
 COPY script/mariadb.sh /mariadb.sh
 
+CMD ["mysqladmin", "--help"]
+
 ENTRYPOINT ["bash", "mariadb.sh"]
 
 EXPOSE 3306
