--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.15
 
-RUN apk upgrade; apk add --no-cache mariadb mariadb-client
+RUN apk upgrade; apk add mariadb mariadb-client
 COPY conf/50-server.cnf	/etc/my.cnf
 RUN chown -R mysql:mysql /var/lib/mysql; mysql_install_db --user=mysql;
 EXPOSE 3306
