--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - mariadb:/var/lib/mysql
     networks:
       - network
+    expose:
+      - "3306"
     env_file: .env
     restart: on-failure
 
@@ -34,6 +36,8 @@ services:
       - db:/var/www/wordpress
     networks:
       - network
+    expose:
+      - "9000"  
     env_file: .env
     restart: on-failure
 
