--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -58,5 +58,5 @@ RUN	curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
 COPY script/setup_wp.sh /tmp/setup_wp.sh
 RUN chmod +x /tmp/setup_wp.sh
 
-ENTRYPOINT [ "sh", "/tmp/setup_wp.sh" ]
+ENTRYPOINT [ "/bin/sh", "/tmp/setup_wp.sh" ]
 CMD [ "/usr/sbin/php-fpm8", "-F" ]
