--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -22,8 +22,6 @@ services:
       - mariadb:/var/lib/mysql
     networks:
       - network
-    expose:
-      - "3306"
     env_file: .env
     restart: on-failure
 
@@ -35,9 +33,7 @@ services:
     volumes:
       - db:/var/www/wordpress
     networks:
-      - network
-    expose:
-      - "9000"  
+      - network"  
     env_file: .env
     restart: on-failure
 
