--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -13,7 +13,7 @@ http {
 
 		server_name				localhost; #my server name
 		root					/var/www/wordpress; #where is the root og my server
-        index                   index.php  #what is the index file of my server
+        index                   index.php;  #what is the index file of my server
 
 		location / { #trying to handle 404 error
 			try_files		    $uri $uri/ =404;
