--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -15,6 +15,8 @@ http {
 		root					/var/www/wordpress; #where is the root og my server
         index                   index.php;  #what is the index file of my server
 
+		access_log /var/log/nginx/access.log;
+		error_log /var/log/nginx/error.log;
 		location / { #trying to handle 404 error
 			try_files		    $uri $uri/ =404;
 		}
