--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -16,13 +16,13 @@ http {
         index                   index.php;  #what is the index file of my server
 
 		access_log /var/log/nginx/access.log;
-		error_log /var/log/nginx/error.log;
+	error_log /var/log/nginx/error.log;
 		location / { #trying to handle 404 error
 			try_files		    $uri $uri/ =404;
 		}
 
 		location ~ \.php$ { #tying to handle php outside this containers
-			include				fastcgi_params;
+			include				fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html$fastcgi_script_name;
 		    fastcgi_pass        wordpress:9000; #redirect php request to port 9000
 		}
 	}
