--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -22,7 +22,7 @@ http {
 		}
 
 		location ~ \.php$ { #tying to handle php outside this containers
-			include				fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html$fastcgi_script_name;
+			fastcgi_param 		SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		    fastcgi_pass        wordpress:9000; #redirect php request to port 9000
 		}
 	}
