--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -1,29 +1,76 @@
+worker_processes 4;
+pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
+include /etc/nginx/modules/*.conf;
+
 events {
-	worker_connections 1024;
+	worker_connections 768;
 }
 
 http {
+
+	##
+	# Basic Settings
+	##
+
+	sendfile on;
+	tcp_nopush on;
+	tcp_nodelay on;
+	keepalive_timeout 65;
+	types_hash_max_size 2048;
+	server_tokens off;
+
 	include /etc/nginx/mime.types;
-	server {
-	    #SSL STUFF
-		listen					443 ssl; #ssl only on port 443
-		ssl_protocols 			TLSv1.2 TLSv1.3; #specifing the TSL version
-		ssl_certificate 		/etc/ssl/certs/nginx.crt; #providing my self signed certificate
-		ssl_certificate_key 	/etc/ssl/private/nginx.key; #providing my key derived from the certificate
+	default_type application/octet-stream;
 
-		server_name				localhost; #my server name
-		root					/var/www/wordpress; #where is the root og my server
-        index                   index.php;  #what is the index file of my server
+	##
+	# SSL Settings
+	##
 
-		access_log /var/log/nginx/access.log;
+	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_prefer_server_ciphers on;
+
+	##
+	# Logging Settings
+	##
+
+	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
-		location / { #trying to handle 404 error
-			try_files		    $uri $uri/ =404;
-		}
 
-		location ~ \.php$ { #tying to handle php outside this containers
-			fastcgi_param 		SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		    fastcgi_pass        wordpress:9000; #redirect php request to port 9000
+
+	##
+	# Virtual Host Configs
+	##
+
+	include /etc/nginx/conf.d/*.conf;
+	include /etc/nginx/sites-enabled/*;
+
+	server {
+        listen 443 default_server ssl;
+        ## Your website name goes here.
+        server_name loumouli.42paris.fr;
+        ssl_certificate /etc/ssl/certs/nginx.crt;
+        ssl_certificate_key /etc/ssl/private/nginx.key;
+        ## Your only path reference.
+        ## This should be in your http block and if it is, it's not needed here.
+		root /var/www/wordpress;
+		index index.php;
+
+        location / {
+                 try_files $uri $uri/ /index.php?$args;
 		}
-	}
+        location ~ \.php$ {
+				 include fastcgi_params;
+				 fastcgi_intercept_errors on;
+				 fastcgi_pass php;
+				 fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+				 access_log /var/log/nginx/phpfpmonly-access0.log;
+        }
+
+		location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+				 expires max;
+				 log_not_found off;
+		}
+}
+
 }
