--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -13,5 +13,5 @@ EXPOSE 443
 RUN chmod 755 /var/www/html
 RUN chown -R www-data:www-data /var/www/html
 
-CMD ["nginx", "-g", "daemon off;"]
-# CMD ["nginx", "-t"]
+# CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx", "-t"]
