--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -34,6 +34,7 @@ http {
 		}
         location ~ \.php$ {
 				 include fastcgi_params;
+				 fastcgi_pass        wordpress:9000; #redirect php request to port 9000
 				 fastcgi_intercept_errors on;
 				 fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
 				 access_log /var/log/nginx/phpfpmonly-access0.log;
